[package]
name = "reactor-queue"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9.2"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros"] }
dotenvy = "0.15"
redis = { version = "1.0", features = ["tokio-comp"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }